<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <TextView
        android:id="@+id/tvNotFound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/completion_not_found"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ivResultIcon,tvSummary,groupFailed,btnSendMore,btnDone" />

    <ImageView
        android:id="@+id/ivResultIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="@dimen/dp_32"
        android:contentDescription="@null"
        tools:src="@drawable/ic_check_circle"
        app:tint="@color/color_success"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.App.Headline"
        tools:text="12 of 12 files sent"
        app:layout_constraintTop_toBottomOf="@id/ivResultIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="tvFailedLabel,rvFailedFiles" />

    <TextView
        android:id="@+id/tvFailedLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:text="@string/completion_failed_label"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:textColor="@color/color_error"
        app:layout_constraintTop_toBottomOf="@id/tvSummary"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFailedFiles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layoutAnimation="@anim/layout_animation_fall_down"

        tools:listitem="@layout/transfer_item_failed_file"
        app:layout_constraintTop_toBottomOf="@id/tvFailedLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSendMore" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendMore"
        style="@style/Widget.App.Button.Outline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        android:text="@string/completion_send_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/completion_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>